# familytree

./: .env.example  .gitattributes  .gitignore  LICENSE  README-cn.md  README.md  docker-compose-source.sqlite.yml  docker-compose-source.yml  docker-compose.sqlite.yml  docker-compose.yml  nginx.conf.template  package-lock.json  package.json
.github/workflows/: all.yaml  ci.yaml  main-release.yaml  pre-relase.yaml  pre-release.yaml  promote.yaml  release-tag.yaml
backend/: .dockerignore  .env.example  Dockerfile  entrypoint.sh  main.py  pyproject.toml  requirements.txt  start.bat
backend/app/: crud.py  database.py  db_init.py  main.py  models.py  schemas.py
backend/app/data/: family_tree.db  han_data.json  ming_data.json  tang_data.json
backend/app/historicol_data/: han_data.json  ming_data.json  tang_data.json
backend/app/routers/: families.py  members.py  regions.py  relationships.py  users.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: config.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: BatchEditMemberDialog.tsx  ConfirmDialog.tsx  FamilyCard.tsx  FamilyManager.tsx  FamilyTreeCanvas.tsx  HistoricalDateInput.tsx  Layout.tsx  MemberDetail.tsx  MultiSelectionActions.tsx  PropertyPanel.tsx  SharedFamilyRow.tsx
frontend/src/config/: constants.ts
frontend/src/context/: AuthContext.tsx  SettingsContext.tsx  SettingsContextDef.ts
frontend/src/contexts/: FamilyContext.tsx
frontend/src/hooks/: useAuth.ts  useSettings.ts  useTheme.ts
scripts/: README.md
(+50 files in other folders)
