[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.109.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.3",
    "pymysql==1.1.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.25",
    "uvicorn==0.27.0",
]

[dependency-groups]
dev = ["ruff>=0.14.14"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
